update server module

--- a/cunxu-rpc-server/pom.xml
+++ b/cunxu-rpc-server/pom.xml
@@ -10,6 +10,30 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cunxu-rpc-server</artifactId>
-
-
+    <dependencies>
+        <dependency>
+            <groupId>com.cunxu</groupId>
+            <artifactId>cunxu-rpc-proto</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.cunxu</groupId>
+            <artifactId>cunxu-rpc-transport</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.cunxu</groupId>
+            <artifactId>cunxu-rpc-codec</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.cunxu</groupId>
+            <artifactId>cunxu-rpc-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+    </dependencies>
 </project>
